--- a/arch/arm/boot/dts/qcom/qcom-ipq4019.dtsi
+++ b/arch/arm/boot/dts/qcom/qcom-ipq4019.dtsi
@@ -604,6 +604,7 @@
 			resets = <&gcc ESS_PSGMII_ARES>;
 			reset-names = "psgmii_rst";
 			mdio = <&mdio>;
+			psgmii-ethphy = <&psgmiiphy>;
 
 			status = "disabled";
 
@@ -716,22 +717,37 @@
 
 			ethphy0: ethernet-phy@0 {
 				reg = <0>;
+
+				qcom,control-dac = <QCA807X_CONTROL_DAC_DSP_VOLT_QUARTER_BIAS>;
 			};
 
 			ethphy1: ethernet-phy@1 {
 				reg = <1>;
+
+				qcom,control-dac = <QCA807X_CONTROL_DAC_DSP_VOLT_QUARTER_BIAS>;
 			};
 
 			ethphy2: ethernet-phy@2 {
 				reg = <2>;
+
+				qcom,control-dac = <QCA807X_CONTROL_DAC_DSP_VOLT_QUARTER_BIAS>;
 			};
 
 			ethphy3: ethernet-phy@3 {
 				reg = <3>;
+
+				qcom,control-dac = <QCA807X_CONTROL_DAC_DSP_VOLT_QUARTER_BIAS>;
 			};
 
 			ethphy4: ethernet-phy@4 {
 				reg = <4>;
+
+				qcom,control-dac = <QCA807X_CONTROL_DAC_DSP_VOLT_QUARTER_BIAS>;
+			};
+			psgmiiphy: psgmii-phy@5 {
+				reg = <5>;
+
+				qcom,tx-driver-strength = <PSGMII_QSGMII_TX_DRIVER_300MV>;
 			};
 
 		};
