net: dsa: qca: Make QCA8K hardware library available globally
The Qualcomm QCA8K Ethernet switch is already supported in the kernel, as
an external DSA switch. However, the Qualcomm IPQ4019 SoC contains an
internal modified QCA8K switch that does not fit into the DSA model, since
it uses an out-of-band tagging protocol.

Move the qca8k.h header file out of the QCA8K DSA driver so that the
IPQ4019 QCA8K switchdev driver can include it.

Refactor qca8k-common into a separate module so that the IPQESS driver can
be built as a module.

Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/drivers/net/dsa/qca/Kconfig
+++ b/drivers/net/dsa/qca/Kconfig
@@ -11,6 +11,7 @@ config NET_DSA_AR9331
 config NET_DSA_QCA8K
 	tristate "Qualcomm Atheros QCA8K Ethernet switch family support"
 	select NET_DSA_TAG_QCA
+	select NET_DSA_QCA8K_LIB
 	select REGMAP
 	help
 	  This enables support for the Qualcomm Atheros QCA8K Ethernet
@@ -24,3 +25,10 @@ config NET_DSA_QCA8K_LEDS_SUPPORT
 	help
 	  This enabled support for LEDs present on the Qualcomm Atheros
 	  QCA8K Ethernet switch chips.
+
+config NET_DSA_QCA8K_LIB
+	tristate "Qualcomm Atheros QCA8K hardware support library"
+	select REGMAP
+	help
+	  This is a hardware support library for the Qualcomm Atheros
+	  QCA8K Ethernet switch. It is used by the IPQESS switch driver.
