--- a/drivers/net/ethernet/qualcomm/ipqess/Makefile
+++ b/drivers/net/ethernet/qualcomm/ipqess/Makefile
@@ -3,11 +3,6 @@
 # Makefile for the IPQ ESS driver
 #
 
-obj-$(CONFIG_QCOM_IPQ4019_ESS) += ipq-ess-switch.o
+obj-$(CONFIG_QCOM_IPQ4019_ESS) += ipqess.o
 
-# Probe order is important here: the EDMA driver
-# should probe after the switch driver
-obj-$(CONFIG_QCOM_IPQ4019_ESS) += ipq-ess-edma.o
-
-ipq-ess-switch-objs := ipqess_port.o ipqess_phylink.o ipqess_switch.o ipqess_notifiers.o
-ipq-ess-edma-objs := ipqess_edma.o
+ipqess-objs := ipqess_port.o ipqess_phylink.o ipqess_switch.o ipqess_notifiers.o ipqess_edma.o
